--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,74 +1,53 @@
 .nav {
   display: none;
-  ul {
-    li {
-      margin: 0px 0 0px 0px;
-      width: 100%;
-    }
-    .icon {
-      margin: 0 5px 2px 0px;
-    }
-  }
   @include media("dekstop") {
-    display: none;
-    margin: 0 0 0 -10px;
+    @include nav;
   }
 }
 .nav-open {
-  display: none;
   @include media("dekstop") {
+    overflow: hidden;
     display: block;
     @include navOpenClose;
     @include nav;
-    animation: nav--open 1s ease-in-out 0s 1 normal forwards;
-    @include drapeaulangue;
     ul {
       li {
-        margin: 0px 0 0px 0px;
-        width: 100%;
+        @include media("dekstop") {
+          width: 100%;
+          height: auto;
+          margin: 0 25.4vh 0 -1.9vh;
+        }
+        @include media("tablet") {
+          margin: 0 0px 0 -10px;
+        }
       }
-      .icon {
-        margin: 0 5px 2px 0px;
-      }
     }
-    .sombre {
-      color: black;
-      margin: 0 5px 0px 0px;
-    }
-    .claire {
-      color: #b4b400;
-      margin: 0 5px 0px 0px;
-    }
+    animation: nav--open 1s ease-in-out 0s 1 normal forwards;
+    @include drapeaulangue;
   }
 }
 
 // animation: nav--close 1s ease-in-out 0s 1 normal forwards;
 
 .nav-close {
-  display: none;
   @include media("dekstop") {
     display: block;
     @include navOpenClose;
     @include nav;
-    animation: nav--close 1s ease-in-out 0s 1 normal forwards;
-    @include drapeaulangue;
     ul {
       li {
-        width: 97.5%;
-        margin: 0px 0 0px 10px;
+        @include media("dekstop") {
+          width: 100%;
+          height: auto;
+          margin: 0 23vh 0 0vh;
+        }
+        @include media("tablet") {
+          margin: 0 0px 0 0px;
+        }
       }
-      .icon {
-        margin: 0 5px 2px 0px;
-      }
     }
-    .sombre {
-      color: black;
-      margin: 0 5px 0px 0px;
-    }
-    .claire {
-      color: #b4b400;
-      margin: 0 5px 0px 0px;
-    }
+    animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+    @include drapeaulangue;
   }
 }
 .nav-animation {
@@ -79,19 +58,13 @@
   }
 }
 
-// Nav desktop
-
 .nav-desktop {
   @include media("dekstop") {
     display: none;
   }
   display: block;
   @include nav-desktop;
-  ul {
-    .icon {
-      margin: 0 5px 2px 0px;
-    }
-  }
+  
 }
 
 .image {
