--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -84,7 +84,18 @@
   .nav {
     display: block;
     position: absolute;
-    top: 20%;
+    top: 17%;
+    @include media("tablet") {
+      top: 23%;
+    }
+    .sombre {
+      color: black;
+      margin: 0 5px 0px 0px;
+    }
+    .claire {
+      color: #b4b400;
+      margin: 0 5px 0px 0px;
+    }
     ul {
       display: inline-block;
       text-align: center;
@@ -114,13 +125,16 @@
         &:nth-last-child(4) {
           border-bottom: 1px solid #7a7a7a;
         }
-        .nav__link {
+        .link {
           color: $colour-text-light;
           text-decoration: none;
           &--active {
             color: $colour-text-active;
           }
         }
+      }
+      .icon {
+        margin: 0 5px 2px 0px;
       }
     }
   }
@@ -132,6 +146,9 @@
     align-items: center;
     flex-wrap: wrap;
     list-style: none;
+    .icon {
+      margin: 0 5px 2px 0px;
+    }
     .li {
       &:first-child {
         background-color: $coulour-bacground-link-active;
@@ -144,9 +161,11 @@
       border-radius: 10%;
     }
     li {
+      cursor: pointer;
       padding: 15px;
       &:last-child {
         border-bottom: 0;
+        color: $colour-text-active;
       }
       &:nth-last-child(2) {
         border-bottom: 0;
@@ -156,11 +175,22 @@
       &:nth-last-child(4) {
         border-bottom: 0;
       }
+      .link {
+        color: $colour-text-light;
+        text-decoration: none;
+        &--active {
+          color: $colour-text-active;
+        }
+      }
     }
-
     a {
       text-decoration: none;
       color: $colour-text-light;
+    }
+  }
+  .nav__link {
+    &--active {
+      color: white;
     }
   }
 }
@@ -207,7 +237,9 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 0 0 15px 0;
+    margin: 0 0 6px 3vh;
+    color: $colour-text-light;
+
     &__police {
       font-size: medium;
     }
@@ -215,6 +247,8 @@
       display: none;
     }
     .toggleBtn {
+      border: 3px solid #9e9191;
+
       border-radius: 16px;
       align-self: center;
       cursor: pointer;
@@ -225,6 +259,8 @@
       user-select: none;
       transition: 0.4s;
       &::before {
+        background-color: #9e9191;
+
         left: 1%;
         content: "";
         border-radius: 16px;
