--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,14 +1,14 @@
 $colour-primary: #15dea5;
 $colour-secondary: #001534;
 $colour-accent: #d6fff5;
-$colour-white: #fff;
 $colour-invalid: #db464b;
 $colour-background-mobile: white;
 $colour-text-light: #3bc1b0;
 $colour-text-active: white;
 $coulour-li-border-bottom: #7a7a7a;
-$coulour-bacground-link-active: #0078d4;
-$coulour-lang:#821B72;
+$coulour-bacground-link-active: #45739C ;
+$coulour-bacground-link-active-desktop: #45739C  ;
+$coulour-lang: #821b72;
 
 $heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
