--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,9 +6,10 @@ $colour-background-mobile: white;
 $colour-text-light: #3bc1b0;
 $colour-text-active: white;
 $coulour-li-border-bottom: #7a7a7a;
-$coulour-bacground-link-active: #45739C ;
-$coulour-bacground-link-active-desktop: #45739C  ;
-$coulour-lang: #821b72;
+$coulour-bacground-link-active: #2980b9;
+$coulour-bacground-link-active-hover: #236d9e;
+$coulour-lang: #34495e;
+$coulour-lang-hover: #2c3e50;
 
 $heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
