--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,6 +21,14 @@ body {
   background-color: black;
 }
 
+// .bodyLight {
+//   transition: background 0.3s ease;
+// }
+.bodyLight {
+  color: white;
+  transition: background 0.6s ease;
+}
+
 .wrapper {
   display: none;
 }
