--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,7 @@
   // border: 1px solid red;
   &__background {
     width: 100%;
+    // height: 95vh;
     height: auto;
     background-color: #00000094;
   }
@@ -34,12 +35,13 @@
           color: #ffffff;
         }
         h1 {
+          margin: 0 0 0 -2px;
           @include media("mobile") {
             font-size: 23.4pt;
           }
         }
         h2 {
-          margin: -10px 0px 0px 3px;
+          margin: -10px 0px 0px 0;
           font-size: medium;
           color: #dadada;
           @include media(mobile) {
@@ -68,6 +70,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        margin: 0 0 20vh 0;
         &--modifier {
           color: #f0f0f0;
         }
@@ -85,29 +88,32 @@
       flex-direction: column;
     }
     span {
-      display: block;
+      display: none;
       @include media("dekstop") {
-        // display: block;
+        display: block;
         font-size: medium;
       }
     }
-
     .overlay {
+      @include media(dekstop) {
+        display: none;
+      }
       display: flex;
       flex-direction: column;
-      span {
-        display: none;
-        @include media("dekstop") {
-          display: none;
-          &__text {
-            font-size: medium;
-            margin: 0 0px 0 -8px;
-            &--modifier {
-              color: white;
-            }
-          }
+      // opacity: 0.5;
+      // background-color: blue;
+      &__text {
+        font-size: medium;
+        // margin: -7vh 0 30px 18px;
+        // height: auto;
+        // width: 12vh;
+        &--modifier {
+          color: white;
         }
       }
+      // p {
+      //   margin: 0px 0px 0px 15px;
+      // }
     }
   }
 
@@ -167,11 +173,9 @@
         }
       }
       img {
-        // height: 100%;
-        // width: 100px;
         width: 20px; // Pour le drapeau, je ne comprend pas
         height: auto;
-        z-index: 99;
+        margin: 0px 5px -4px 0px;
       }
     }
   }
