--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./components/hamburgerBtn";
 @import "./components/loading";
 @import "./components//darkmodeinput";
+@import "./components/button";
 
 @import "./layout/header";
 @import "./layout/nav";
