--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -59,3 +59,16 @@
     left: 2.5%;
   }
 }
+
+// Animation down
+@keyframes UpDown {
+  0% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 1em;
+  }
+  100% {
+    bottom: 0;
+  }
+}
